tests/positive/Records2.juvix
module Records2;

import Stdlib.Data.Nat open;

type Pair (A B : Type) :=
  mkPair@{
    pfst : A;
    psnd : B;
  };

open Pair using {mkPair} public;

main : Pair Nat Nat :=
  let
    p : Pair Nat Nat := mkPair 2 2;
  in p@Pair{pfst := Pair.pfst p + Pair.psnd p};
